feat: update article API response wrappers
